--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: John Doe # your name (or website title) here
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
+title: Linh (Dionne) Phan
+logo: "/images/fotor-2025052322917.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   First description 
   <br><br>
