--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,6 @@ description: > # your text below (remove <br> elements if you don't need line br
   <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
   
 remote_theme: pages-themes/minimal@v0.2.0
-plugins:
-- jekyll-remote-theme
-google_analytics: UA-000000-0 # your Google Analytics tracking ID here
+# plugins:
+# - jekyll-remote-theme
+# google_analytics: UA-000000-0 # your Google Analytics tracking ID here
